[package]
name = "safe_iot"
version = "0.1.0"
authors = ["hunterlester <guilfordhunter@gmail.com>"]

[dependencies]
safe_authenticator = "0.4.0"
safe_core = "0.27.0"
maidsafe_utilities = "0.14.1"
log = "0.3.8"
unwrap = "~1.1.0"

[features]
default = ["use-mock-routing", "testing"]
use-mock-routing = ["safe_core/use-mock-routing"]
testing = ["safe_authenticator/testing"]

